fix(): alignment in items on larger screens

--- a/challenge-flexbox-04/style.css
+++ b/challenge-flexbox-04/style.css
@@ -163,4 +163,8 @@ article {
     .additional-item--two {
         flex-direction: row-reverse;
     }
+
+    .additional-item--title {
+        text-align: start;
+    }
 }
